infra/cdk.out/BackendStack.template.json
{
 "Resources": {
  "HostedZoneDB99F866": {
   "Type": "AWS::Route53::HostedZone",
   "Properties": {
    "Name": "feelfwd.app."
   },
   "Metadata": {
    "aws:cdk:path": "BackendStack/HostedZone/Resource"
   }
  },
  "FeelForwardRepository9D657FF6": {
   "Type": "AWS::ECR::Repository",
   "Properties": {
    "ImageScanningConfiguration": {
     "ScanOnPush": true
    },
    "RepositoryName": "feel-forward"
   },
   "UpdateReplacePolicy": "Delete",
   "DeletionPolicy": "Delete",
   "Metadata": {
    "aws:cdk:path": "BackendStack/FeelForwardRepository/Resource"
   }
  },
  "OpenAISecretAD3AE700": {
   "Type": "AWS::SecretsManager::Secret",
   "Properties": {
    "Description": "OpenAI API key for Feel Forward backend",
    "GenerateSecretString": {},
    "Name": "feel-forward/openai-api-key"
   },
   "UpdateReplacePolicy": "Delete",
   "DeletionPolicy": "Delete",
   "Metadata": {
    "aws:cdk:path": "BackendStack/OpenAISecret/Resource"
   }
  },
  "FeelForwardCluster8588157D": {
   "Type": "AWS::ECS::Cluster",
   "Properties": {
    "ClusterName": "feel-forward"
   },
   "Metadata": {
    "aws:cdk:path": "BackendStack/FeelForwardCluster/Resource"
   }
  },
  "FeelForwardClusterVpcA15CBA61": {
   "Type": "AWS::EC2::VPC",
   "Properties": {
    "CidrBlock": "10.0.0.0/16",
    "EnableDnsHostnames": true,
    "EnableDnsSupport": true,
    "InstanceTenancy": "default",
    "Tags": [
     {
      "Key": "Name",
      "Value": "BackendStack/FeelForwardCluster/Vpc"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "BackendStack/FeelForwardCluster/Vpc/Resource"
   }
  },
  "FeelForwardClusterVpcPublicSubnet1Subnet943A0472": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": {
     "Fn::Select": [
      0,
      {
       "Fn::GetAZs": ""
      }
     ]
    },
    "CidrBlock": "10.0.0.0/18",
    "MapPublicIpOnLaunch": true,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Public"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Public"
     },
     {
      "Key": "Name",
      "Value": "BackendStack/FeelForwardCluster/Vpc/PublicSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "FeelForwardClusterVpcA15CBA61"
    }
   },
   "Metadata": {
    "aws:cdk:path": "BackendStack/FeelForwardCluster/Vpc/PublicSubnet1/Subnet"
   }
  },
  "FeelForwardClusterVpcPublicSubnet1RouteTable205528D8": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "BackendStack/FeelForwardCluster/Vpc/PublicSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "FeelForwardClusterVpcA15CBA61"
    }
   },
   "Metadata": {
    "aws:cdk:path": "BackendStack/FeelForwardCluster/Vpc/PublicSubnet1/RouteTable"
   }
  },
  "FeelForwardClusterVpcPublicSubnet1RouteTableAssociation7B485FED": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "FeelForwardClusterVpcPublicSubnet1RouteTable205528D8"
    },
    "SubnetId": {
     "Ref": "FeelForwardClusterVpcPublicSubnet1Subnet943A0472"
    }
   },
   "Metadata": {
    "aws:cdk:path": "BackendStack/FeelForwardCluster/Vpc/PublicSubnet1/RouteTableAssociation"
   }
  },
  "FeelForwardClusterVpcPublicSubnet1DefaultRouteCFAD7246": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "GatewayId": {
     "Ref": "FeelForwardClusterVpcIGW081C6006"
    },
    "RouteTableId": {
     "Ref": "FeelForwardClusterVpcPublicSubnet1RouteTable205528D8"
    }
   },
   "DependsOn": [
    "FeelForwardClusterVpcVPCGWDC10EEE2"
   ],
   "Metadata": {
    "aws:cdk:path": "BackendStack/FeelForwardCluster/Vpc/PublicSubnet1/DefaultRoute"
   }
  },
  "FeelForwardClusterVpcPublicSubnet1EIP317B2DF8": {
   "Type": "AWS::EC2::EIP",
   "Properties": {
    "Domain": "vpc",
    "Tags": [
     {
      "Key": "Name",
      "Value": "BackendStack/FeelForwardCluster/Vpc/PublicSubnet1"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "BackendStack/FeelForwardCluster/Vpc/PublicSubnet1/EIP"
   }
  },
  "FeelForwardClusterVpcPublicSubnet1NATGatewayAB34CC1B": {
   "Type": "AWS::EC2::NatGateway",
   "Properties": {
    "AllocationId": {
     "Fn::GetAtt": [
      "FeelForwardClusterVpcPublicSubnet1EIP317B2DF8",
      "AllocationId"
     ]
    },
    "SubnetId": {
     "Ref": "FeelForwardClusterVpcPublicSubnet1Subnet943A0472"
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "BackendStack/FeelForwardCluster/Vpc/PublicSubnet1"
     }
    ]
   },
   "DependsOn": [
    "FeelForwardClusterVpcPublicSubnet1DefaultRouteCFAD7246",
    "FeelForwardClusterVpcPublicSubnet1RouteTableAssociation7B485FED"
   ],
   "Metadata": {
    "aws:cdk:path": "BackendStack/FeelForwardCluster/Vpc/PublicSubnet1/NATGateway"
   }
  },
  "FeelForwardClusterVpcPublicSubnet2Subnet06870497": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": {
     "Fn::Select": [
      1,
      {
       "Fn::GetAZs": ""
      }
     ]
    },
    "CidrBlock": "10.0.64.0/18",
    "MapPublicIpOnLaunch": true,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Public"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Public"
     },
     {
      "Key": "Name",
      "Value": "BackendStack/FeelForwardCluster/Vpc/PublicSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "FeelForwardClusterVpcA15CBA61"
    }
   },
   "Metadata": {
    "aws:cdk:path": "BackendStack/FeelForwardCluster/Vpc/PublicSubnet2/Subnet"
   }
  },
  "FeelForwardClusterVpcPublicSubnet2RouteTableF2D3815B": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "BackendStack/FeelForwardCluster/Vpc/PublicSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "FeelForwardClusterVpcA15CBA61"
    }
   },
   "Metadata": {
    "aws:cdk:path": "BackendStack/FeelForwardCluster/Vpc/PublicSubnet2/RouteTable"
   }
  },
  "FeelForwardClusterVpcPublicSubnet2RouteTableAssociation308DE457": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "FeelForwardClusterVpcPublicSubnet2RouteTableF2D3815B"
    },
    "SubnetId": {
     "Ref": "FeelForwardClusterVpcPublicSubnet2Subnet06870497"
    }
   },
   "Metadata": {
    "aws:cdk:path": "BackendStack/FeelForwardCluster/Vpc/PublicSubnet2/RouteTableAssociation"
   }
  },
  "FeelForwardClusterVpcPublicSubnet2DefaultRoute386ADB33": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "GatewayId": {
     "Ref": "FeelForwardClusterVpcIGW081C6006"
    },
    "RouteTableId": {
     "Ref": "FeelForwardClusterVpcPublicSubnet2RouteTableF2D3815B"
    }
   },
   "DependsOn": [
    "FeelForwardClusterVpcVPCGWDC10EEE2"
   ],
   "Metadata": {
    "aws:cdk:path": "BackendStack/FeelForwardCluster/Vpc/PublicSubnet2/DefaultRoute"
   }
  },
  "FeelForwardClusterVpcPublicSubnet2EIP48273B5A": {
   "Type": "AWS::EC2::EIP",
   "Properties": {
    "Domain": "vpc",
    "Tags": [
     {
      "Key": "Name",
      "Value": "BackendStack/FeelForwardCluster/Vpc/PublicSubnet2"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "BackendStack/FeelForwardCluster/Vpc/PublicSubnet2/EIP"
   }
  },
  "FeelForwardClusterVpcPublicSubnet2NATGateway72A2E404": {
   "Type": "AWS::EC2::NatGateway",
   "Properties": {
    "AllocationId": {
     "Fn::GetAtt": [
      "FeelForwardClusterVpcPublicSubnet2EIP48273B5A",
      "AllocationId"
     ]
    },
    "SubnetId": {
     "Ref": "FeelForwardClusterVpcPublicSubnet2Subnet06870497"
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "BackendStack/FeelForwardCluster/Vpc/PublicSubnet2"
     }
    ]
   },
   "DependsOn": [
    "FeelForwardClusterVpcPublicSubnet2DefaultRoute386ADB33",
    "FeelForwardClusterVpcPublicSubnet2RouteTableAssociation308DE457"
   ],
   "Metadata": {
    "aws:cdk:path": "BackendStack/FeelForwardCluster/Vpc/PublicSubnet2/NATGateway"
   }
  },
  "FeelForwardClusterVpcPrivateSubnet1Subnet8E64007E": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": {
     "Fn::Select": [
      0,
      {
       "Fn::GetAZs": ""
      }
     ]
    },
    "CidrBlock": "10.0.128.0/18",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Private"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Private"
     },
     {
      "Key": "Name",
      "Value": "BackendStack/FeelForwardCluster/Vpc/PrivateSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "FeelForwardClusterVpcA15CBA61"
    }
   },
   "Metadata": {
    "aws:cdk:path": "BackendStack/FeelForwardCluster/Vpc/PrivateSubnet1/Subnet"
   }
  },
  "FeelForwardClusterVpcPrivateSubnet1RouteTable15568F85": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "BackendStack/FeelForwardCluster/Vpc/PrivateSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "FeelForwardClusterVpcA15CBA61"
    }
   },
   "Metadata": {
    "aws:cdk:path": "BackendStack/FeelForwardCluster/Vpc/PrivateSubnet1/RouteTable"
   }
  },
  "FeelForwardClusterVpcPrivateSubnet1RouteTableAssociationE0B0980B": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "FeelForwardClusterVpcPrivateSubnet1RouteTable15568F85"
    },
    "SubnetId": {
     "Ref": "FeelForwardClusterVpcPrivateSubnet1Subnet8E64007E"
    }
   },
   "Metadata": {
    "aws:cdk:path": "BackendStack/FeelForwardCluster/Vpc/PrivateSubnet1/RouteTableAssociation"
   }
  },
  "FeelForwardClusterVpcPrivateSubnet1DefaultRoute2738DF5C": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "NatGatewayId": {
     "Ref": "FeelForwardClusterVpcPublicSubnet1NATGatewayAB34CC1B"
    },
    "RouteTableId": {
     "Ref": "FeelForwardClusterVpcPrivateSubnet1RouteTable15568F85"
    }
   },
   "Metadata": {
    "aws:cdk:path": "BackendStack/FeelForwardCluster/Vpc/PrivateSubnet1/DefaultRoute"
   }
  },
  "FeelForwardClusterVpcPrivateSubnet2Subnet19243333": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": {
     "Fn::Select": [
      1,
      {
       "Fn::GetAZs": ""
      }
     ]
    },
    "CidrBlock": "10.0.192.0/18",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Private"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Private"
     },
     {
      "Key": "Name",
      "Value": "BackendStack/FeelForwardCluster/Vpc/PrivateSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "FeelForwardClusterVpcA15CBA61"
    }
   },
   "Metadata": {
    "aws:cdk:path": "BackendStack/FeelForwardCluster/Vpc/PrivateSubnet2/Subnet"
   }
  },
  "FeelForwardClusterVpcPrivateSubnet2RouteTableEAA1BA5E": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "BackendStack/FeelForwardCluster/Vpc/PrivateSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "FeelForwardClusterVpcA15CBA61"
    }
   },
   "Metadata": {
    "aws:cdk:path": "BackendStack/FeelForwardCluster/Vpc/PrivateSubnet2/RouteTable"
   }
  },
  "FeelForwardClusterVpcPrivateSubnet2RouteTableAssociationD1EA0F72": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "FeelForwardClusterVpcPrivateSubnet2RouteTableEAA1BA5E"
    },
    "SubnetId": {
     "Ref": "FeelForwardClusterVpcPrivateSubnet2Subnet19243333"
    }
   },
   "Metadata": {
    "aws:cdk:path": "BackendStack/FeelForwardCluster/Vpc/PrivateSubnet2/RouteTableAssociation"
   }
  },
  "FeelForwardClusterVpcPrivateSubnet2DefaultRouteAD7746B5": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "NatGatewayId": {
     "Ref": "FeelForwardClusterVpcPublicSubnet2NATGateway72A2E404"
    },
    "RouteTableId": {
     "Ref": "FeelForwardClusterVpcPrivateSubnet2RouteTableEAA1BA5E"
    }
   },
   "Metadata": {
    "aws:cdk:path": "BackendStack/FeelForwardCluster/Vpc/PrivateSubnet2/DefaultRoute"
   }
  },
  "FeelForwardClusterVpcIGW081C6006": {
   "Type": "AWS::EC2::InternetGateway",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "BackendStack/FeelForwardCluster/Vpc"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "BackendStack/FeelForwardCluster/Vpc/IGW"
   }
  },
  "FeelForwardClusterVpcVPCGWDC10EEE2": {
   "Type": "AWS::EC2::VPCGatewayAttachment",
   "Properties": {
    "InternetGatewayId": {
     "Ref": "FeelForwardClusterVpcIGW081C6006"
    },
    "VpcId": {
     "Ref": "FeelForwardClusterVpcA15CBA61"
    }
   },
   "Metadata": {
    "aws:cdk:path": "BackendStack/FeelForwardCluster/Vpc/VPCGW"
   }
  },
  "FeelForwardClusterVpcRestrictDefaultSecurityGroupCustomResource0CD79C99": {
   "Type": "Custom::VpcRestrictDefaultSG",
   "Properties": {
    "ServiceToken": {
     "Fn::GetAtt": [
      "CustomVpcRestrictDefaultSGCustomResourceProviderHandlerDC833E5E",
      "Arn"
     ]
    },
    "DefaultSecurityGroupId": {
     "Fn::GetAtt": [
      "FeelForwardClusterVpcA15CBA61",
      "DefaultSecurityGroup"
     ]
    },
    "Account": {
     "Ref": "AWS::AccountId"
    }
   },
   "UpdateReplacePolicy": "Delete",
   "DeletionPolicy": "Delete",
   "Metadata": {
    "aws:cdk:path": "BackendStack/FeelForwardCluster/Vpc/RestrictDefaultSecurityGroupCustomResource/Default"
   }
  },
  "CustomVpcRestrictDefaultSGCustomResourceProviderRole26592FE0": {
   "Type": "AWS::IAM::Role",
   "Properties": {
    "AssumeRolePolicyDocument": {
     "Version": "2012-10-17",
     "Statement": [
      {
       "Action": "sts:AssumeRole",
       "Effect": "Allow",
       "Principal": {
        "Service": "lambda.amazonaws.com"
       }
      }
     ]
    },
    "ManagedPolicyArns": [
     {
      "Fn::Sub": "arn:${AWS::Partition}:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole"
     }
    ],
    "Policies": [
     {
      "PolicyName": "Inline",
      "PolicyDocument": {
       "Version": "2012-10-17",
       "Statement": [
        {
         "Effect": "Allow",
         "Action": [
          "ec2:AuthorizeSecurityGroupIngress",
          "ec2:AuthorizeSecurityGroupEgress",
          "ec2:RevokeSecurityGroupIngress",
          "ec2:RevokeSecurityGroupEgress"
         ],
         "Resource": [
          {
           "Fn::Join": [
            "",
            [
             "arn:aws:ec2:us-east-1:",
             {
              "Ref": "AWS::AccountId"
             },
             ":security-group/",
             {
              "Fn::GetAtt": [
               "FeelForwardClusterVpcA15CBA61",
               "DefaultSecurityGroup"
              ]
             }
            ]
           ]
          }
         ]
        }
       ]
      }
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "BackendStack/Custom::VpcRestrictDefaultSGCustomResourceProvider/Role"
   }
  },
  "CustomVpcRestrictDefaultSGCustomResourceProviderHandlerDC833E5E": {
   "Type": "AWS::Lambda::Function",
   "Properties": {
    "Code": {
     "S3Bucket": {
      "Fn::Sub": "cdk-hnb659fds-assets-${AWS::AccountId}-us-east-1"
     },
     "S3Key": "7fa1e366ee8a9ded01fc355f704cff92bfd179574e6f9cfee800a3541df1b200.zip"
    },
    "Timeout": 900,
    "MemorySize": 128,
    "Handler": "__entrypoint__.handler",
    "Role": {
     "Fn::GetAtt": [
      "CustomVpcRestrictDefaultSGCustomResourceProviderRole26592FE0",
      "Arn"
     ]
    },
    "Runtime": "nodejs22.x",
    "Description": "Lambda function for removing all inbound/outbound rules from the VPC default security group"
   },
   "DependsOn": [
    "CustomVpcRestrictDefaultSGCustomResourceProviderRole26592FE0"
   ],
   "Metadata": {
    "aws:cdk:path": "BackendStack/Custom::VpcRestrictDefaultSGCustomResourceProvider/Handler",
    "aws:asset:path": "asset.7fa1e366ee8a9ded01fc355f704cff92bfd179574e6f9cfee800a3541df1b200",
    "aws:asset:property": "Code"
   }
  },
  "FeelForwardLogs4C765279": {
   "Type": "AWS::Logs::LogGroup",
   "Properties": {
    "LogGroupName": "/ecs/feel-forward",
    "RetentionInDays": 7
   },
   "UpdateReplacePolicy": "Delete",
   "DeletionPolicy": "Delete",
   "Metadata": {
    "aws:cdk:path": "BackendStack/FeelForwardLogs/Resource"
   }
  },
  "FeelForwardTaskDefTaskRole234D7B29": {
   "Type": "AWS::IAM::Role",
   "Properties": {
    "AssumeRolePolicyDocument": {
     "Statement": [
      {
       "Action": "sts:AssumeRole",
       "Effect": "Allow",
       "Principal": {
        "Service": "ecs-tasks.amazonaws.com"
       }
      }
     ],
     "Version": "2012-10-17"
    }
   },
   "Metadata": {
    "aws:cdk:path": "BackendStack/FeelForwardTaskDef/TaskRole/Resource"
   }
  },
  "FeelForwardTaskDef2259C11D": {
   "Type": "AWS::ECS::TaskDefinition",
   "Properties": {
    "ContainerDefinitions": [
     {
      "Environment": [
       {
        "Name": "PYTHONUNBUFFERED",
        "Value": "1"
       }
      ],
      "Essential": true,
      "Image": {
       "Fn::Join": [
        "",
        [
         {
          "Fn::Select": [
           4,
           {
            "Fn::Split": [
             ":",
             {
              "Fn::GetAtt": [
               "FeelForwardRepository9D657FF6",
               "Arn"
              ]
             }
            ]
           }
          ]
         },
         ".dkr.ecr.",
         {
          "Fn::Select": [
           3,
           {
            "Fn::Split": [
             ":",
             {
              "Fn::GetAtt": [
               "FeelForwardRepository9D657FF6",
               "Arn"
              ]
             }
            ]
           }
          ]
         },
         ".",
         {
          "Ref": "AWS::URLSuffix"
         },
         "/",
         {
          "Ref": "FeelForwardRepository9D657FF6"
         },
         ":latest"
        ]
       ]
      },
      "LogConfiguration": {
       "LogDriver": "awslogs",
       "Options": {
        "awslogs-group": {
         "Ref": "FeelForwardLogs4C765279"
        },
        "awslogs-stream-prefix": "feel-forward",
        "awslogs-region": "us-east-1"
       }
      },
      "Name": "web",
      "PortMappings": [
       {
        "ContainerPort": 8000,
        "Protocol": "tcp"
       }
      ],
      "Secrets": [
       {
        "Name": "OPENAI_API_KEY",
        "ValueFrom": {
         "Ref": "OpenAISecretAD3AE700"
        }
       }
      ]
     }
    ],
    "Cpu": "256",
    "ExecutionRoleArn": {
     "Fn::GetAtt": [
      "FeelForwardTaskDefExecutionRoleB2968F60",
      "Arn"
     ]
    },
    "Family": "BackendStackFeelForwardTaskDef45064446",
    "Memory": "512",
    "NetworkMode": "awsvpc",
    "RequiresCompatibilities": [
     "FARGATE"
    ],
    "TaskRoleArn": {
     "Fn::GetAtt": [
      "FeelForwardTaskDefTaskRole234D7B29",
      "Arn"
     ]
    }
   },
   "Metadata": {
    "aws:cdk:path": "BackendStack/FeelForwardTaskDef/Resource"
   }
  },
  "FeelForwardTaskDefExecutionRoleB2968F60": {
   "Type": "AWS::IAM::Role",
   "Properties": {
    "AssumeRolePolicyDocument": {
     "Statement": [
      {
       "Action": "sts:AssumeRole",
       "Effect": "Allow",
       "Principal": {
        "Service": "ecs-tasks.amazonaws.com"
       }
      }
     ],
     "Version": "2012-10-17"
    }
   },
   "Metadata": {
    "aws:cdk:path": "BackendStack/FeelForwardTaskDef/ExecutionRole/Resource"
   }
  },
  "FeelForwardTaskDefExecutionRoleDefaultPolicy5537ABFF": {
   "Type": "AWS::IAM::Policy",
   "Properties": {
    "PolicyDocument": {
     "Statement": [
      {
       "Action": [
        "ecr:BatchCheckLayerAvailability",
        "ecr:BatchGetImage",
        "ecr:GetDownloadUrlForLayer"
       ],
       "Effect": "Allow",
       "Resource": {
        "Fn::GetAtt": [
         "FeelForwardRepository9D657FF6",
         "Arn"
        ]
       }
      },
      {
       "Action": "ecr:GetAuthorizationToken",
       "Effect": "Allow",
       "Resource": "*"
      },
      {
       "Action": [
        "logs:CreateLogStream",
        "logs:PutLogEvents"
       ],
       "Effect": "Allow",
       "Resource": {
        "Fn::GetAtt": [
         "FeelForwardLogs4C765279",
         "Arn"
        ]
       }
      },
      {
       "Action": [
        "secretsmanager:DescribeSecret",
        "secretsmanager:GetSecretValue"
       ],
       "Effect": "Allow",
       "Resource": {
        "Ref": "OpenAISecretAD3AE700"
       }
      }
     ],
     "Version": "2012-10-17"
    },
    "PolicyName": "FeelForwardTaskDefExecutionRoleDefaultPolicy5537ABFF",
    "Roles": [
     {
      "Ref": "FeelForwardTaskDefExecutionRoleB2968F60"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "BackendStack/FeelForwardTaskDef/ExecutionRole/DefaultPolicy/Resource"
   }
  },
  "FeelForwardService7F265263": {
   "Type": "AWS::ECS::Service",
   "Properties": {
    "Cluster": {
     "Ref": "FeelForwardCluster8588157D"
    },
    "DeploymentConfiguration": {
     "Alarms": {
      "AlarmNames": [],
      "Enable": false,
      "Rollback": false
     },
     "MaximumPercent": 200,
     "MinimumHealthyPercent": 50
    },
    "DesiredCount": 1,
    "EnableECSManagedTags": false,
    "HealthCheckGracePeriodSeconds": 60,
    "LaunchType": "FARGATE",
    "LoadBalancers": [
     {
      "ContainerName": "web",
      "ContainerPort": 8000,
      "TargetGroupArn": {
       "Ref": "FeelForwardTargetGroup7ACCA0EA"
      }
     }
    ],
    "NetworkConfiguration": {
     "AwsvpcConfiguration": {
      "AssignPublicIp": "ENABLED",
      "SecurityGroups": [
       {
        "Fn::GetAtt": [
         "FeelForwardServiceSecurityGroup38727D59",
         "GroupId"
        ]
       }
      ],
      "Subnets": [
       {
        "Ref": "FeelForwardClusterVpcPublicSubnet1Subnet943A0472"
       },
       {
        "Ref": "FeelForwardClusterVpcPublicSubnet2Subnet06870497"
       }
      ]
     }
    },
    "TaskDefinition": {
     "Ref": "FeelForwardTaskDef2259C11D"
    }
   },
   "DependsOn": [
    "FeelForwardLBListenerF2C2B4A3",
    "FeelForwardTaskDefTaskRole234D7B29"
   ],
   "Metadata": {
    "aws:cdk:path": "BackendStack/FeelForwardService/Service"
   }
  },
  "FeelForwardServiceSecurityGroup38727D59": {
   "Type": "AWS::EC2::SecurityGroup",
   "Properties": {
    "GroupDescription": "BackendStack/FeelForwardService/SecurityGroup",
    "SecurityGroupEgress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allow all outbound traffic by default",
      "IpProtocol": "-1"
     }
    ],
    "VpcId": {
     "Ref": "FeelForwardClusterVpcA15CBA61"
    }
   },
   "DependsOn": [
    "FeelForwardTaskDefTaskRole234D7B29"
   ],
   "Metadata": {
    "aws:cdk:path": "BackendStack/FeelForwardService/SecurityGroup/Resource"
   }
  },
  "FeelForwardServiceSecurityGroupfromBackendStackFeelForwardLBSecurityGroup5689468F80007D7620F8": {
   "Type": "AWS::EC2::SecurityGroupIngress",
   "Properties": {
    "Description": "Load balancer to target",
    "FromPort": 8000,
    "GroupId": {
     "Fn::GetAtt": [
      "FeelForwardServiceSecurityGroup38727D59",
      "GroupId"
     ]
    },
    "IpProtocol": "tcp",
    "SourceSecurityGroupId": {
     "Fn::GetAtt": [
      "FeelForwardLBSecurityGroupDA7B46D1",
      "GroupId"
     ]
    },
    "ToPort": 8000
   },
   "DependsOn": [
    "FeelForwardTaskDefTaskRole234D7B29"
   ],
   "Metadata": {
    "aws:cdk:path": "BackendStack/FeelForwardService/SecurityGroup/from BackendStackFeelForwardLBSecurityGroup5689468F:8000"
   }
  },
  "FeelForwardServiceTaskCountTargetDF022119": {
   "Type": "AWS::ApplicationAutoScaling::ScalableTarget",
   "Properties": {
    "MaxCapacity": 3,
    "MinCapacity": 1,
    "ResourceId": {
     "Fn::Join": [
      "",
      [
       "service/",
       {
        "Ref": "FeelForwardCluster8588157D"
       },
       "/",
       {
        "Fn::GetAtt": [
         "FeelForwardService7F265263",
         "Name"
        ]
       }
      ]
     ]
    },
    "RoleARN": {
     "Fn::Join": [
      "",
      [
       "arn:aws:iam::",
       {
        "Ref": "AWS::AccountId"
       },
       ":role/aws-service-role/ecs.application-autoscaling.amazonaws.com/AWSServiceRoleForApplicationAutoScaling_ECSService"
      ]
     ]
    },
    "ScalableDimension": "ecs:service:DesiredCount",
    "ServiceNamespace": "ecs"
   },
   "DependsOn": [
    "FeelForwardTaskDefTaskRole234D7B29"
   ],
   "Metadata": {
    "aws:cdk:path": "BackendStack/FeelForwardService/TaskCount/Target/Resource"
   }
  },
  "FeelForwardServiceTaskCountTargetCpuScalingBA3E8F2A": {
   "Type": "AWS::ApplicationAutoScaling::ScalingPolicy",
   "Properties": {
    "PolicyName": "BackendStackFeelForwardServiceTaskCountTargetCpuScalingB4D396D9",
    "PolicyType": "TargetTrackingScaling",
    "ScalingTargetId": {
     "Ref": "FeelForwardServiceTaskCountTargetDF022119"
    },
    "TargetTrackingScalingPolicyConfiguration": {
     "PredefinedMetricSpecification": {
      "PredefinedMetricType": "ECSServiceAverageCPUUtilization"
     },
     "ScaleInCooldown": 60,
     "ScaleOutCooldown": 60,
     "TargetValue": 70
    }
   },
   "DependsOn": [
    "FeelForwardTaskDefTaskRole234D7B29"
   ],
   "Metadata": {
    "aws:cdk:path": "BackendStack/FeelForwardService/TaskCount/Target/CpuScaling/Resource"
   }
  },
  "FeelForwardLBD887B569": {
   "Type": "AWS::ElasticLoadBalancingV2::LoadBalancer",
   "Properties": {
    "LoadBalancerAttributes": [
     {
      "Key": "deletion_protection.enabled",
      "Value": "false"
     }
    ],
    "Scheme": "internet-facing",
    "SecurityGroups": [
     {
      "Fn::GetAtt": [
       "FeelForwardLBSecurityGroupDA7B46D1",
       "GroupId"
      ]
     }
    ],
    "Subnets": [
     {
      "Ref": "FeelForwardClusterVpcPublicSubnet1Subnet943A0472"
     },
     {
      "Ref": "FeelForwardClusterVpcPublicSubnet2Subnet06870497"
     }
    ],
    "Type": "application"
   },
   "DependsOn": [
    "FeelForwardClusterVpcPublicSubnet1DefaultRouteCFAD7246",
    "FeelForwardClusterVpcPublicSubnet1RouteTableAssociation7B485FED",
    "FeelForwardClusterVpcPublicSubnet2DefaultRoute386ADB33",
    "FeelForwardClusterVpcPublicSubnet2RouteTableAssociation308DE457"
   ],
   "Metadata": {
    "aws:cdk:path": "BackendStack/FeelForwardLB/Resource"
   }
  },
  "FeelForwardLBSecurityGroupDA7B46D1": {
   "Type": "AWS::EC2::SecurityGroup",
   "Properties": {
    "GroupDescription": "Automatically created Security Group for ELB BackendStackFeelForwardLBC820C02C",
    "SecurityGroupIngress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allow from anyone on port 80",
      "FromPort": 80,
      "IpProtocol": "tcp",
      "ToPort": 80
     }
    ],
    "VpcId": {
     "Ref": "FeelForwardClusterVpcA15CBA61"
    }
   },
   "Metadata": {
    "aws:cdk:path": "BackendStack/FeelForwardLB/SecurityGroup/Resource"
   }
  },
  "FeelForwardLBSecurityGrouptoBackendStackFeelForwardServiceSecurityGroupE496196480007C759561": {
   "Type": "AWS::EC2::SecurityGroupEgress",
   "Properties": {
    "Description": "Load balancer to target",
    "DestinationSecurityGroupId": {
     "Fn::GetAtt": [
      "FeelForwardServiceSecurityGroup38727D59",
      "GroupId"
     ]
    },
    "FromPort": 8000,
    "GroupId": {
     "Fn::GetAtt": [
      "FeelForwardLBSecurityGroupDA7B46D1",
      "GroupId"
     ]
    },
    "IpProtocol": "tcp",
    "ToPort": 8000
   },
   "Metadata": {
    "aws:cdk:path": "BackendStack/FeelForwardLB/SecurityGroup/to BackendStackFeelForwardServiceSecurityGroupE4961964:8000"
   }
  },
  "FeelForwardLBListenerF2C2B4A3": {
   "Type": "AWS::ElasticLoadBalancingV2::Listener",
   "Properties": {
    "DefaultActions": [
     {
      "TargetGroupArn": {
       "Ref": "FeelForwardTargetGroup7ACCA0EA"
      },
      "Type": "forward"
     }
    ],
    "LoadBalancerArn": {
     "Ref": "FeelForwardLBD887B569"
    },
    "Port": 80,
    "Protocol": "HTTP"
   },
   "Metadata": {
    "aws:cdk:path": "BackendStack/FeelForwardLB/Listener/Resource"
   }
  },
  "FeelForwardTargetGroup7ACCA0EA": {
   "Type": "AWS::ElasticLoadBalancingV2::TargetGroup",
   "Properties": {
    "HealthCheckIntervalSeconds": 30,
    "HealthCheckPath": "/health",
    "HealthCheckPort": "8000",
    "HealthCheckProtocol": "HTTP",
    "HealthCheckTimeoutSeconds": 5,
    "HealthyThresholdCount": 2,
    "Port": 8000,
    "Protocol": "HTTP",
    "TargetGroupAttributes": [
     {
      "Key": "stickiness.enabled",
      "Value": "false"
     }
    ],
    "TargetType": "ip",
    "UnhealthyThresholdCount": 2,
    "VpcId": {
     "Ref": "FeelForwardClusterVpcA15CBA61"
    }
   },
   "Metadata": {
    "aws:cdk:path": "BackendStack/FeelForwardTargetGroup/Resource"
   }
  },
  "ApiRecord15755A12": {
   "Type": "AWS::Route53::RecordSet",
   "Properties": {
    "AliasTarget": {
     "DNSName": {
      "Fn::Join": [
       "",
       [
        "dualstack.",
        {
         "Fn::GetAtt": [
          "FeelForwardLBD887B569",
          "DNSName"
         ]
        }
       ]
      ]
     },
     "HostedZoneId": {
      "Fn::GetAtt": [
       "FeelForwardLBD887B569",
       "CanonicalHostedZoneID"
      ]
     }
    },
    "HostedZoneId": {
     "Ref": "HostedZoneDB99F866"
    },
    "Name": "api.feelfwd.app.",
    "Type": "A"
   },
   "Metadata": {
    "aws:cdk:path": "BackendStack/ApiRecord/Resource"
   }
  },
  "WWW9F8609DA": {
   "Type": "AWS::Route53::RecordSet",
   "Properties": {
    "HostedZoneId": {
     "Ref": "HostedZoneDB99F866"
    },
    "Name": "www.feelfwd.app.",
    "ResourceRecords": [
     "feelfwd.app"
    ],
    "TTL": "1800",
    "Type": "CNAME"
   },
   "Metadata": {
    "aws:cdk:path": "BackendStack/WWW/Resource"
   }
  },
  "CDKMetadata": {
   "Type": "AWS::CDK::Metadata",
   "Properties": {
    "Analytics": "v2:deflate64:H4sIAAAAAAAA/31S227bMAz9lr4rWpdgH5BmXRegKAw76MNeBkZmVTayFIh0gsDwvw+ynDhZhz3xnMOLjgjO9fx+ru/v4MgzU+9mjra6qwTMTsGRf3cxtILfFrr7GViw/hU8qtWbv2LLEk2IdVIzqlDUykODmfYKTdRdifvAJCGecuWZ9YrRRBRuwIPFqLtq4KkqozSAdbdyLQvGpJ/hD4gWBDfAu+/4Rp6Egk8FfyvBC5DHeKWNvRXGAxnMr2VYGXCwdcPYVWj9YGCuu9e9SWWvxUoV7daRqdqtH41eUJn2tUntkz5pS+ZgCM42h0QCj+sihReQJxA8wkkVkQ7J3mXw2gtGj5eC7GRkSxEw7w16URWaNpKcnmJo9+MS/yOsvY3I/El/HOReuWBZd8/BXtrPuFcEje7KkL86xCI4MoO3jHoF+70jM/wYWglswJG3upuWHO24w1slh00EsyNvq [...]
   },
   "Metadata": {
    "aws:cdk:path": "BackendStack/CDKMetadata/Default"
   }
  }
 },
 "Parameters": {
  "BootstrapVersion": {
   "Type": "AWS::SSM::Parameter::Value<String>",
   "Default": "/cdk-bootstrap/hnb659fds/version",
   "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]"
  }
 },
 "Rules": {
  "CheckBootstrapVersion": {
   "Assertions": [
    {
     "Assert": {
      "Fn::Not": [
       {
        "Fn::Contains": [
         [
          "1",
          "2",
          "3",
          "4",
          "5"
         ],
         {
          "Ref": "BootstrapVersion"
         }
        ]
       }
      ]
     },
     "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI."
    }
   ]
  }
 }
}
